# ytt

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  ar.md  pyproject.toml  ytt.py
docs/adr/: 0001-domain-structure.md  001-domain-structure.md
docs/adrs/: 001-use-changelog.md  002-domain-structure.md  003-test-organization.md  004-ai-agent-delivery-workflow.md
docs/plans/: 001-add-title-and-description.md  002-markdown-link-video-id.md  003-prepend-video-url.md  004-clipboard-default-url.md  005-refresh.md  006-clipboard-fallback-for-fetch-flags.md  plan-001-add-title-and-description.md
docs/prds/: 001-add-title-and-description.md  002-markdown-link-video-id.md  003-prepend-video-url.md  004-clipboard-default-url.md  005-refresh.md  006-clipboard-fallback-for-fetch-flags.md
docs/specs/: 001-add-title-and-description.md  002-markdown-link-video-id.md  003-prepend-video-url.md  004-clipboard-default-url.md  005-refresh.md  006-clipboard-fallback-for-fetch-flags.md  spec-001-add-title-and-description.md
research/2025-05-27-get-description/: README.md  get_description_request.py
research/2025-05-28-get-title/: README.md  get_title_research.py
src/ytt/: __init__.py  main.py  version.py
src/ytt/application/: __init__.py  cli.py  config_service.py  fetch_service.py
src/ytt/domain/: __init__.py  entities.py  services.py  value_objects.py
src/ytt/infrastructure/: __init__.py  clipboard.py  config.py  metadata.py  transcript_repository.py
tests/: test_ytt.py
tests/unit/ytt/domain/: test_value_objects.py
tests/unit/ytt/infrastructure/: test_metadata.py  test_transcript_repository.py
tests/unit/ytt/main/: test_main.py
